more small edits

--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -77,14 +77,15 @@ Although the cause of vertical dynamical heating is not well understood,
 interactions with giant molecular clouds, spiral arms and the galactic bar are
 thought to play an important role \citep[see][for a review of secular
 evolution in the MW]{sellwood2014}.
-The velocity of any individual star will only provide a weak age constraint
-because its velocity depends on its position in orbit, however the velocity
-{\it dispersion} of a {\it group} of stars will indicate whether that group is
-old or young relative to other groups.
-Vertical velocity dispersion is thought to increase monotonically with age.
+The velocity of any individual star will only provide a weak age constraint,
+because its velocity depends on its current position in orbit, however the
+velocity {\it dispersion} of a {\it group} of stars will indicate whether that
+group is old or young relative to other groups.
+% Vertical velocity dispersion is thought to increase monotonically with age.
 In this work we compare the velocity dispersions of groups of field stars in
-the Galactic thin disk to ascertain which groups are older and which younger
-and draw conclusions based on the implied relative ages.
+the Galactic thin disk, to ascertain which groups are older and which younger,
+and draw conclusions about the rotational evolution of stars based on their
+implied relative ages.
 % The age-velocity dispersion reations (AVRs) are still actively being
 
 % Vertical action is thought to be a better age indicator than vertical
@@ -96,7 +97,7 @@ only be calculated with full 6-dimensional position and velocity information.
 In fact, with full 6D phase space and an assumed Galactic potential, it is
 possible to calculate vertical {\it action}, which may be an even better age
 indicator \citep{beane2018, ting2019}.
-Unfortunately most field stars with measured rotation periods do not have
+Unfortunately, most field stars with measured rotation periods do not have
 radial velocity (RV) measurements because they are relatively faint \kepler\
 targets ($\sim$12th-16th magnitudes).
 For this reason, we used velocity in the direction of galactic latitude, \vb,
@@ -104,23 +105,25 @@ to approximate \vz.
 The \kepler\ field is positioned at low galactic latitude
 (b=$\sim$5-20\degrees), so \vb\ is a close (although imperfect, see section
 \ref{sec:method}) approximation to \vz.
-Because we use \vb\ rather than \vz\, we cannot calculate absolute kinematic
-ages using a published age-velocity dispersion relation (AVR), but this could
-be addressed in follow-up work that also takes into account the Kepler
-selection function.
-However, regardless of direction, velocity dispersion is expected to
+Because we use \vb\ rather than \vz\, we do not calculate absolute kinematic
+ages using a published age-velocity dispersion relation (AVR), calibrated with
+vertical velocity, in this work.
+In future it may be possible to account for the differences between \vb\ and
+\vz, or marginalize over missing RV measurements and the \kepler\ selection
+function, in order to infer absolute ages.
+Regardless of direction however, velocity dispersion is expected to
 monotonically increase over time \citep[\eg][]{holmberg2009}, and can
 therefore be used to {\it rank} groups of stars by age.
 
 This paper is laid out as follows: in section \ref{sec:method} we describe our
 sample selection process and the methods used to calculate stellar
 velocities.
-In section \ref{sec:results} we use kinematics to investigate the
-relationship between rotation period, age and color/\teff\ in the field and
-interpret our results.
+In section \ref{sec:results} we use kinematics to investigate the relationship
+between stellar rotation period, age and color/\teff\ and interpret the
+results.
 We also establish that \vb\ velocity dispersion, \sigmavb, can be used as an
 age proxy by demonstrating that neither mass-dependent heating nor the
-selection function is observed to strongly affect our sample.
+\kepler/\gaia\ selection function is observed to strongly affect our sample.
 Finally, we examine the rotation period gap and the kinematics of synchronized
 binaries in section \ref{sec:results}.
 % We show that the period-color relation of Praesepe is not applicable to
