--- a/paper/method.tex
+++ b/paper/method.tex
@@ -83,7 +83,8 @@ Photometric binaries and subgiants were removed from the sample by applying
 cuts to the color-magnitude diagram (CMD), shown in figure
 \ref{fig:age_gradient}.
 A 6th-order polynomial was fit to the main sequence and raised by 0.27 dex to
-approximate the division between single stars and photometrci binaries.
+approximate the division between single stars and photometric binaries (shown
+as the curved dashed line in figure \ref{fig:age_gradient}).
 All stars above this line were removed from the sample.
 Subgiants were also removed by eliminating stars brighter than 4th magnitude
 in \gaia\ G-band.
