minor edits to middle sections

--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1405,6 +1405,63 @@ archivePrefix = {arXiv},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@ARTICLE{noyes1984,
+       author = {{Noyes}, R.~W. and {Hartmann}, L.~W. and {Baliunas}, S.~L. and
+         {Duncan}, D.~K. and {Vaughan}, A.~H.},
+        title = "{Rotation, convection, and magnetic activity in lower main-sequence stars.}",
+      journal = {\apj},
+     keywords = {Magnetic Stars, Main Sequence Stars, Stellar Activity, Stellar Magnetic Fields, Stellar Rotation, Chromosphere, Convection, Late Stars, Magnetoactivity, Astrophysics},
+         year = 1984,
+        month = apr,
+       volume = {279},
+        pages = {763-777},
+          doi = {10.1086/161945},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1984ApJ...279..763N},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{schatzman1962,
+       author = {{Schatzman}, E.},
+        title = "{A theory of the role of magnetic activity during star formation}",
+      journal = {Annales d'Astrophysique},
+         year = 1962,
+        month = feb,
+       volume = {25},
+        pages = {18},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1962AnAp...25...18S},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@ARTICLE{charbonneau2010,
+       author = {{Charbonneau}, Paul},
+        title = "{Dynamo Models of the Solar Cycle}",
+      journal = {Living Reviews in Solar Physics},
+     keywords = {Sun: activity, Sun: cycle, Sun: dynamo, Sun: magnetic fields, Solar Cycle, Flux Rope, Differential Rotation, Meridional Circulation, Dynamo Model},
+         year = 2010,
+        month = sep,
+       volume = {7},
+       number = {1},
+          eid = {3},
+        pages = {3},
+          doi = {10.12942/lrsp-2010-3},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2010LRSP....7....3C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+@ARTICLE{parker1970,
+       author = {{Parker}, E.~N.},
+        title = "{The Generation of Magnetic Fields in Astrophysical Bodies. I. The Dynamo Equations}",
+      journal = {\apj},
+         year = 1970,
+        month = nov,
+       volume = {162},
+        pages = {665},
+          doi = {10.1086/150697},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1970ApJ...162..665P},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
 
 @article{astropy2018,
     Adsnote = {Provided by the SAO/NASA Astrophysics Data System},
