--- a/paper/method.tex
+++ b/paper/method.tex
@@ -60,12 +60,12 @@ color is a seventh-order polynomial with coefficients given in table
 \begin{table}[h!]
   \begin{center}
       \caption{
-          Coefficient values for a 7th-order polynomial used to estimate
+          Coefficient values for the 7th-order polynomial used to estimate
       \teff\ from \Gaia\ \gcolor\ color, calibrated in Curtis \etal\ (2020, in
       prep).}
     \label{tab:coeffs}
     \begin{tabular}{l|c} % <-- Alignments: 1st column left and 2nd middle, with vertical lines in between
-      Exponent & Coefficient  \\
+        (\gcolor\ ) exponent & Coefficient  \\
       \hline
       $0$ & -416.585 \\
       $1$ & 39780.0  \\
@@ -79,8 +79,8 @@ color is a seventh-order polynomial with coefficients given in table
   \end{center}
 \end{table}
 
-Photometric binaries and subgiants were removed from the sample by applying
-cuts to the color-magnitude diagram (CMD), shown in figure
+Photometric binaries and subgiants were removed from the \mct\ sample by
+applying cuts to the color-magnitude diagram (CMD), shown in figure
 \ref{fig:age_gradient}.
 A 6th-order polynomial was fit to the main sequence and raised by 0.27 dex to
 approximate the division between single stars and photometric binaries (shown
@@ -89,8 +89,9 @@ All stars above this line were removed from the sample.
 Subgiants were also removed by eliminating stars brighter than 4th magnitude
 in \gaia\ G-band.
 
-The dwarf stars in the \mct\ sample are shown on a \gaia\ color-magnitude
-diagram (CMD) in figure \ref{fig:age_gradient}.
+The rotation periods of the dwarf stars in the \mct\ sample are shown on a
+\gaia\ color-magnitude diagram (CMD) in the top panel of figure
+\ref{fig:age_gradient}.
 In the bottom panel, the stars are colored by their gyrochronal age,
 calculated using the \citet{angus2019} gyrochronology relation.
 The stars with old gyrochronal ages, plotted in purple hues, predominantly lie
@@ -101,26 +102,29 @@ The lack of gyrochronologically old M dwarfs suggests that either old M dwarfs
 are missing from the \mct\ catalog, or the \citet{angus2019} gyrochronology
 relation under-predicts the ages of low-mass stars.
 Given that lower-mass stars stay active for longer than higher-mass stars
-\citep[\eg][]{west2011}, and are therefore more likely to have measurable
-rotation periods at old ages, the latter scenario seems more likely.
-An alternative explanation could be that the rotation periods of the oldest
-early M dwarfs are so long that they are not measurable with Kepler data.
+\citep[\eg][]{west2011, kiman2019}, and are therefore more likely to have
+measurable rotation periods at old ages, the latter scenario seems likely.
+However, it is also possible that the rotation periods of the oldest early M
+dwarfs are so long that they are not measurable with Kepler data.
 Ground-based rotation period measurements of mid and late M dwarfs indicate
-that there is an upper limit to the rotation periods of M dwarfs of around 140
-days \citep{newton2016, newton2017, newton2018}, which is much longer than the
-longest rotation periods measured in the \mct\ sample (around 70 days).
-For this reason, it is likely that slowly rotating M dwarfs are missing from
-the \mct\ sample and this could be another reason for the lack of old M
-dwarfs.
-
+that there is an upper limit to the rotation periods of {\it late} M dwarfs of
+around 140 days \citep{newton2016, newton2017, newton2018}, which is much
+longer than the longest rotation periods measured in the \mct\ sample (around
+70 days).
+The apparent lack of old ages for M dwarfs in figure \ref{fig:age_gradient}
+may be caused by a combination of ages being underestimated by a poorly
+calibrated model, and rotation period detection bias.
+% For this reason, it is likely that slowly rotating M dwarfs are missing from
+% the \mct\ sample and this could be another reason for the lack of old M
+% dwarfs.
 The \citet{angus2019} gyrochronology relation is a simple polynomial model,
 fit to the period-color relation of Praesepe.
-Since this relation predicts that the oldest stars in the \mct\ sample are
-late-G and early-K dwarfs, it is probably under-predicting the ages of late-K
-and early-M dwarfs.
-This is a typical feature of empirically calibrated gyrochronology models:
-since there are no (or at least very few) old M dwarfs with rotation periods,
-the models are poorly calibrated for these stars.
+% Since this relation predicts that the oldest stars in the \mct\ sample are
+% late-G and early-K dwarfs, it is probably under-predicting the ages of late-K
+% and early-M dwarfs.
+Inaccuracies are a typical feature of empirically calibrated gyrochronology
+models: since there are no (or at least very few) old M dwarfs with rotation
+periods, the models are poorly calibrated for these stars.
 \begin{figure}
   \caption{
       Top: de-reddened MS \kepler\ stars with \mct\ rotation periods, plotted
@@ -141,10 +145,11 @@ the models are poorly calibrated for these stars.
 \end{figure}
 
 The {\tt Pyia} \citep{price-whelan_2018} and {\tt astropy} \citep{astropy2013,
-astropy2018} {\it Python} packages were used to calculate stellar velocities.
+astropy2018} {\it Python} packages were used to calculate velocities for the
+\mct\ sample.
 {\tt Pyia} calculates velocity samples from the full \gaia\ uncertainty
 covariance matrix via Monte Carlo sampling, thereby accounting for the
-ovariances between \gaia\ positions, parallaxes and proper motions.
+covariances between \gaia\ positions, parallaxes and proper motions.
 Stars with negative parallaxes, parallax signal-to-noise ratios less than 10,
 stars fainter than 16th magnitude, stars with absolute \vb\ uncertainties
 greater than 1 \kms\, and stars with galactic latitudes greater than
