--- a/paper/results.tex
+++ b/paper/results.tex
@@ -111,24 +111,27 @@
 \subsection{The period-\teff\ relations, revealed}
 \label{sec:the_reveal}
 
-To explore the relationship between rotation period, \teff\ and velocity
-dispersion, we first removed high and low velocity outliers from the \mct\
-sample by performing 3$\sigma$ sigma-clipping on the \vb\ velocities.
+To explore the relationship between rotation period, effective temperature
+(\teff ) and velocity dispersion, we first removed high and low velocity
+outliers from the \mct\ sample by performing 3$\sigma$ sigma-clipping on the
+\vb\ velocities.
 Without sigma-clipping, we found that a small number of high velocity
 outliers at the low-temperature end of our sample substantially raised the
-velocity dispersion for cooler stars, however the overall trends remain the
-same without sigma-clipping.
+velocity dispersion for cooler stars, although this did not change the overall
+trends in the data.
 % We also limited the sample to temperatures in the range 6000 K $<$ \teff\ $<$
 % 3500 K to avoid biases caused by the selection function at the faint, cool
 % end, and binarity or weakened braking \citep{vansaders2016} at the hot end.
-Finally, we removed stars with rotation periods shorter than the bulk of
-periods, since this area of the period-\teff\ diagram is sparsely populated.
-We removed rapid rotators by cutting out stars with gyrochronal ages less than
-0.5 Gyr, because a 0.5 Gyr gyrochrone\footnote{A gyrochrone is a
-gyrochronological isochrone, or a line of constant age in period-\teff, or
-period-color space.} traces the bottom edge of the main population of rotation
-periods.
-After these cuts, 6879 stars were included in the sample.
+Finally, we removed stars with rotation periods shorter than the main
+population of periods, since this area of the period-\teff\ diagram is
+sparsely populated.
+We removed these rapid rotators by cutting out stars with gyrochronal ages
+less than 0.5 Gyr \citep[based on the][gyro-model]{angus2019}, because a 0.5
+Gyr gyrochrone\footnote{A gyrochrone is a gyrochronological isochrone, or a
+line of constant age in period-\teff, or period-color space.} traces the
+bottom edge of the main population of rotation periods.
+After these cuts, around 13,000 stars out of the original $\sim$34,000 were
+included in the sample.
 
 The top panel of figure \ref{fig:vplot} shows rotation period versus effective
 temperature for the \mct\ sample, coloured by the standard deviation of their
@@ -138,6 +141,8 @@ If we assume that mass dependent heating does not strongly affect this sample
 and \vb\ at low galactic latitudes is an unbiased tracer of \vz, then \vb\
 velocity dispersion can be interpreted as an age proxy, and stars plotted in a
 similar color in figure \ref{fig:vplot} are similar ages.
+We discuss this assumption further in section
+\ref{sec:mass-dependent-heating}.
 \begin{figure}
   \caption{
     Top: Rotation period vs effective temperature for stars in the \mct\
@@ -190,9 +195,9 @@ dispersions of around 10-11 kms$^{-1}$ at 5000-5500K and stars with $\sim$15
 The gyrochrones older than 1.5 Gyr also cross a range of velocity dispersions.
 If these were true isochrones they would follow lines of constant velocity
 dispersion.
-At ages older than around 1 Gyr, it appears that gyrochrones should have a more
-flattened, or even inverted relationship between rotation period and effective
-temperature than these Praesepe-based models.
+At ages older than around 1 Gyr, it appears that gyrochrones should have a
+more flattened, or even inverted, shape in rotation period-\teff\ space than
+these Praesepe-based models.
 % For late K-dwarfs older than around 1 Gyr, it appears that lower-mass stars
 % rotate more rapidly than higher-mass stars.
 % This is the opposite of the trend that is observed in young open clusters such
@@ -210,7 +215,7 @@ bottom panel.
 In the bottom panel of figure \ref{fig:vplot}, the \citet{spada2019} models
 {\it do} trace lines of constant velocity dispersion, and reproduce the trends
 in the data at all ages.
-These models qualitatively agree with the data and reproduces the apparent
+These models qualitatively agree with the data and reproduce the apparent
 flattening and inversion in the rotation period-\teff/mass relations.
 
 The results shown in figure \ref{fig:vplot} indicate that stars of spectral
@@ -226,16 +231,22 @@ The velocity dispersions of stars in the \mct\ sample provide the following
 picture of rotational evolution.
 At young ages \citep[younger than around 1 Gyr but still old enough to be on
 the main sequence and have transitioned from the `I' sequence to the `C'
-sequence ][]{barnes2003}, stellar rotation period decreases with increasing
-mass.
+sequence ][]{barnes2003}, stellar rotation period {\it decreases} with {\it
+increasing} mass.
 This is likely because lower-mass stars with deeper convection zones have
 stronger magnetic fields, larger Alfv\'en radii and therefore experience
-greater angular momentum loss rate.
+greater angular momentum loss rate \citep[\eg][]{schatzman1962, parker1970,
+kawaler1988, charbonneau2010}.
 According to the \citet{spada2019} model, there is minimal transportation of
 angular momentum from the surface to the core of the star at these young ages,
 so the surface slows down but the core keeps spinning rapidly.
-At intermediate ages, rotation period is constant with mass, and at late ages
-rotation period {\it increases} with mass for K-dwarfs.
+This aligns with the current assumptions about stellar spin-down, dynamo
+theory, and the gyrochronology paradigm that has been in place for decades
+\citep[\eg][]{skumanich1972, noyes1984, kawaler1988, barnes2003, angus2019}.
+According to the data presented in figure \ref{fig:vplot} however, at
+intermediate ages, the rotation periods of K dwarfs appear {\it constant} with
+mass, and at late ages rotation period {\it increases} with {\it increaasing}
+mass.
 The interpretation of this, according to the \citet{spada2019} model, is that
 lower-mass stars are still braking more efficiently at these intermediate and
 old ages but their cores are more tightly coupled to their envelopes, allowing
