--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -88,7 +88,7 @@
 \author{%
     Ruth Angus$^{1, 2, 3}$,
     Angus Beane$^4$,
-    Adrian Price-Whelan$^2$,
+    Adrian M. Price-Whelan$^2$,
     Jason Curtis$^1$,
     Travis Berger$^6$,
     Rocio Kiman$^7$,
