--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -83,7 +83,7 @@
 
 \begin{document}
 
-\title{Exploring the evolution of stellar rotation using kinematics}
+\title{Exploring the evolution of stellar rotation using Galactic kinematics}
 
 \author{%
     Ruth Angus$^{1, 2, 3}$,
