--- a/paper/bib.bib
+++ b/paper/bib.bib
@@ -1478,3 +1478,25 @@ archivePrefix = {arXiv},
     Volume = {156},
     Year = 2018,
     Bdsk-Url-1 = {https://doi.org/10.3847/1538-3881/aabc4f}}
+
+@ARTICLE{bird2013,
+       author = {{Bird}, Jonathan C. and {Kazantzidis}, Stelios and {Weinberg}, David H. and
+         {Guedes}, Javiera and {Callegari}, Simone and {Mayer}, Lucio and
+         {Madau}, Piero},
+        title = "{Inside out and Upside down: Tracing the Assembly of a Simulated Disk Galaxy Using Mono-age Stellar Populations}",
+      journal = {\apj},
+     keywords = {galaxies: evolution, galaxies: spiral, Galaxy: evolution, Galaxy: formation, Galaxy: kinematics and dynamics, Galaxy: structure, Astrophysics - Astrophysics of Galaxies},
+         year = 2013,
+        month = aug,
+       volume = {773},
+       number = {1},
+          eid = {43},
+        pages = {43},
+          doi = {10.1088/0004-637X/773/1/43},
+archivePrefix = {arXiv},
+       eprint = {1301.0620},
+ primaryClass = {astro-ph.GA},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2013ApJ...773...43B},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
