hyphen to en-dash

--- a/paper/abstract.tex
+++ b/paper/abstract.tex
@@ -12,7 +12,7 @@ an age proxy, to reveal their rotational evolution and demonstrate that
 kinematics could be a useful tool for calibrating gyrochronology.
 % At ages less than $\sim$1 Gyr we find that a gyrochronology model, calibrated
 % to the Praesepe cluster, accurately predicts the relative ages of stars.
-We find that a gyrochronology model, calibrated to fit the period-\teff\
+We find that a gyrochronology model, calibrated to fit the period--\teff\
 relationship of the Praesepe cluster, does not apply to stars older than
 around 1 Gyr.
 % : a polynomial gyrochronology model, fit
