--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -29,7 +29,7 @@ meibom2015, curtis2019} have revealed that rotational evolution is more
 complicated than previously thought.
 For example, the early-to-mid M dwarfs in the $\sim$ 650 Myr Praesepe cluster
 spin more slowly than the G dwarfs; in theory because lower-mass stars have
-deeper convections zones which generate stronger magnetic fields and more
+deeper convective zones which generate stronger magnetic fields and more
 efficient magnetic braking.
 However, in the NGC 6811 cluster which is around 1.1 Gyr \citep{janes2011},
 late-K dwarfs rotate at the {\it same rate} as early-K dwarfs
@@ -38,7 +38,7 @@ In other words, convection zone depth cannot be the only variable that affects
 stellar spin-down rate.
 New semi-empirical models that vary the rate of angular momentum
 redistribution in the interiors of stars are able to reproduce this flattened
-period-color relation \citep{spada2019}.
+period--color relation \citep{spada2019}.
 These models suggest that mass and age-dependent angular momentum transport
 between the cores and envelopes of stars has a significant impact on their
 surface rotation rates.
@@ -70,20 +70,23 @@ Stars are thought to be born in the thin disk of the Milky Way (MW), orbiting
 the Galaxy with a low out-of-plane, or vertical, velocity (\vz),
 just like the star-forming molecular gas observed in the disk today
 \citep[\eg][]{stark1989, stark2005, aumer2009, martig2014, aumer2016}.
-On average, the vertical velocities of stars increase over time
+On average, the vertical velocities of older stars is observed to be larger
 \citep[\eg][]{nordstrom2004, holmberg2007, holmberg2009, aumer2009,
 casagrande2011}.
-Although the cause of vertical dynamical heating is not well understood,
-interactions with giant molecular clouds, spiral arms and the galactic bar are
-thought to play an important role \citep[see][for a review of secular
-evolution in the MW]{sellwood2014}.
-The velocity of any individual star will only provide a weak age constraint,
-because its velocity depends on its current position in orbit, however the
-velocity {\it dispersion} of a {\it group} of stars will indicate whether that
+This is likely either a signature of dynamical heating, such as from
+interactions with giant molecular clouds, spiral arms and the galactic bar
+\citep[see][for a review of secular evolution in the MW]{sellwood2014}, or an
+indication that stars formed dynamically ``hotter'' in the past
+\citep[e.g.,][]{bird2013}.
+In either case, the vertical velocity distribution is observed to depend
+significantly on stellar age.
+While the velocity of any individual star only provides a weak age constraint,
+because its velocity depends on its current position in its orbit, the
+velocity {\it dispersion} of a {\it group} of stars indicates whether that
 group is old or young relative to other groups.
 % Vertical velocity dispersion is thought to increase monotonically with age.
-In this work we compare the velocity dispersions of groups of field stars in
-the Galactic thin disk, to ascertain which groups are older and which younger,
+In this work, we compare the velocity dispersions of groups of field stars in
+the Galactic thin disk to ascertain which groups are older and which younger,
 and draw conclusions about the rotational evolution of stars based on their
 implied relative ages.
 % The age-velocity dispersion reations (AVRs) are still actively being
@@ -92,22 +95,22 @@ implied relative ages.
 % velocity \citep{ting2019}, although still only a weak age indicator for
 % individual stars \citep{beane2018}, however both vertical action ($J_z$) and
 % vertical
-Although {\it vertical} velocity, \vz, is a well-established age proxy, it can
+Although {\it vertical} velocity, \vz, is an established age proxy, it can
 only be calculated with full 6-dimensional position and velocity information.
 In fact, with full 6D phase space and an assumed Galactic potential, it is
-possible to calculate vertical {\it action}, which may be an even better age
-indicator \citep{beane2018, ting2019}.
+possible to calculate the dynamically-invariant vertical {\it action}, which may
+be an even better age indicator \citep{beane2018, ting2019}.
 Unfortunately, most field stars with measured rotation periods do not have
 radial velocity (RV) measurements because they are relatively faint \kepler\
 targets ($\sim$12th-16th magnitudes).
 For this reason, we used velocity in the direction of galactic latitude, \vb,
-to approximate \vz.
+as a proxy for \vz.
 The \kepler\ field is positioned at low galactic latitude
 (b=$\sim$5-20\degrees), so \vb\ is a close (although imperfect, see section
 \ref{sec:method}) approximation to \vz.
 Because we use \vb\ rather than \vz\, we do not calculate absolute kinematic
-ages using a published age-velocity dispersion relation (AVR), calibrated with
-vertical velocity, in this work.
+ages using a published age--velocity dispersion relation (AVR), calibrated with
+vertical velocity.
 In future it may be possible to account for the differences between \vb\ and
 \vz, or marginalize over missing RV measurements and the \kepler\ selection
 function, in order to infer absolute ages.
