--- a/paper/method.tex
+++ b/paper/method.tex
@@ -13,7 +13,7 @@ stellar rotation periods, measured from \kepler\ light curves, with the \gaia\
 DR2 catalog of parallaxes, proper motions and apparent magnitudes.
 Reddening and extinction from dust was calculated for each star using the
 Bayestar dust map implemented in the {\tt dustmaps} {\it Python} package
-\citep{green2018}, and {\tt astropy} \citep{astropy2013}.
+\citep{green2018}, and {\tt astropy} \citep{astropy2013, astropy2018}.
 
 For this work, we used the precise \textit{Gaia} DR2 photometric color,
 $G_{\rm BP} - G_{\rm RP}$, to estimate \teff\ for the Kepler rotators.
