hyphen to en-dash

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -12,7 +12,7 @@ Galaxy, most stars with measured rotation periods do not yet have radial
 velocities, so we used velocity in the direction of Galactic latitude, \vb\,
 as a proxy for \vz.
 Using stars in the GUMS simulation, we showed that using \vb\ as a proxy for
-\vz\ introduces an additional velocity dispersion, which increases with
+\vz\ introduces an additional pseudo-velocity dispersion, which increases with
 increasing Galactic latitude.
 For this reason we did not attempt to convert \vb\ dispersions into ages using
 an age-velocity dispersion relation.
@@ -30,15 +30,15 @@ We used the \vb\ velocity dispersions of stars in the \mct\ catalog to explore
 the evolution of stellar rotation period as a function of effective
 temperature and age.
 We found that the \citet{angus2019} relation, which is based on the
-period-color relation of the 650 Myr Praesepe cluster, does not correctly
-describe the period-age-\teff\ relation for old stars.
+period--color relation of the 650 Myr Praesepe cluster, does not correctly
+describe the period--age--\teff\ relation for old stars.
 Instead we found that, at young ages, rotation period is anti-correlated with
 \teff: cooler stars spin more slowly than hotter stars of the same age.
 However, at intermediate ages the relation flattens out and K dwarfs rotate at
 the same rate, regardless of mass.
 At old ages, it seems that cooler K dwarfs spin more rapidly than hotter K
 dwarfs of the same age.
-We showed that the period-\teff\ relations change shape over time in a way
+We showed that the period--\teff\ relations change shape over time in a way
 that qualitatively agrees with theoretical models which include a
 mass-dependent core-envelope angular momentum transport \citep{spada2019}.
 
