making some edits to the gap/binaries section

--- a/paper/results.tex
+++ b/paper/results.tex
@@ -266,9 +266,6 @@ This implies that the oldest stars with detectable rotation periods, are
 cooler than 4500 K, \ie\ these-low mass stars stay active longer than more
 massive stars.
 
-\subsection{The period gap and synchronized binaries}
-\label{sec:gap}
-
 There is a sharp gap in the population of rotation periods, which lies just
 above the 1 Gyr gyrochrone in the upper panel of figure \ref{fig:vplot}, whose
 origin is unknown and is the subject of much speculation \citep{mcquillan2014,
@@ -281,6 +278,9 @@ tightly coupled.
 If so, this could indicate that the phenomenon responsible for changing the
 shape of gyrochrones in rotation-\teff\ space is related to the phenomenon that
 produces the gap.
+
+\subsection{Synchronized binaries and the \kepler\ period gap}
+\label{sec:gap}
 
 \begin{figure}
   \caption{
@@ -306,13 +306,18 @@ produces the gap.
 \label{fig:gap}
 \end{figure}
 
+In this section, we explored the kinematic properties of the \mct\ sample in
+more detail, investigating the velocity dispersions of stars either side of the
+\kepler\ period gap, and identifying rapidly rotating stars that may be
+synchronized binaries.
+
 The bottom panel of figure \ref{fig:gap} shows the velocity dispersions of
 stars in the \mct\ sample, with stars subdivided into three groups: those that
-rotate more quickly than the major rotation period distribution (green
+rotate more quickly than the major rotation period population (green
 triangles), those with rotation periods shorter than the gap (orange squares),
 and those with rotation periods longer than the gap (blue circles).
 Stars were separated into these three groups using \citet{angus2019}
-gyrochronology models, according to the scheme shown in the legend.
+gyrochronology model, according to the scheme shown in the legend.
 Only stars cooler than 5000 K are included in the bottom panel in order to
 isolate populations above and below the period gap, which only extends up to a
 temperature of $\sim$4600 K in our sample \citep[Although][found that the gap
@@ -321,28 +326,45 @@ In general, velocity dispersion increases with rotation period because both
 quantities increase with age.
 There is a smooth transition in velocity dispersion between stars with
 rotation periods below and above the gap (orange squares to blue circles),
-suggesting that these groups are part of the same galactic population.
+suggesting that these groups are part of the same Galactic population.
 Previously, only the overall velocity dispersions of all stars above and below
 the gap have been compared, leading to the assumption that these groups belong
 to two distinct populations \citep{mcquillan2014}.
-On the other hand, the velocity dispersions of stars with rotation periods
-shorter than the lower edge of the rotation period distribution (green
-triangles) are not significantly smaller than the, presumed older,
-orange-colored stars.
+
+Synchronized binaries are pairs of stars whose rotation periods are equal to
+their orbital period.
+Since synchronization appears to happen at rotation periods of 7 days or
+shorter \citep{simonian2019}, and most isolated stars have rotation periods
+longer than 7 days, the rotation periods of synchronized binaries are likely
+to be {\it shorter} than they would be if they were isolated stars.
+In other words, their rotation periods do not reflect their ages.
+Synchronized binaries are therefore a source of contamination for
+gyrochronology and should be removed from samples before performing a
+gyrochronal age analysis.
+The gyrochronal age of a synchronized binary is likely to be much younger than
+the true age of the system.
+For this reason, stars that rotate rapidly but appear kinematically old are
+likely to be synchronized binaries.
+In general, the velocity dispersions of stars with rotation periods shorter
+than the lower edge of the rotation period distribution (green triangles in
+figure \ref{fig:gap}) are
+not significantly smaller than the, presumed older, orange-colored stars.
+In addition, some of the most rapidly rotating stars sample have relatively
+large velocities.
+The large velocity dispersions of the most rapidly rotating stars in the \mct\
+sample indicates that at least some fraction of these stars are likely to be
+synchronized binaries.
 % This is an indication that many of these are synchronized binaries.
 % The rotation periods of stars in synchronized binaries are tidally locked to
 % the orbital period of the binary system and since synchronized binaries have
 % short orbital periods this can produce old, seemingly isolated stars, with
 % short rotation periods.
-The large velocity dispersions of the most rapidly rotating stars indicates
-that some fraction of these stars are old but rotating rapidly, and therefore
-likely to be synchronized binaries.
 % Given the strong correlation between binary fraction and primary mass
 % \citep[\eg][]{price-whelan2020}, and the fact that M dwarfs take longer to
 % transition from the `I` (rapidly rotating) sequence to the `C' (slowly
 % rotating) sequence, it is likely that
-Figure \ref{fig:gap} indicates that there is an increased probability of stars
-with rotation periods less than $\sim$10 days being synchronized binaries.
+It general, there appears to be an increased probability of stars with
+rotation periods less than $\sim$10 days being synchronized binaries.
 This result is in agreement with a recent study which found that a large
 fraction of photometric binaries were rapid rotators, and the probability of a
 star being a synchronized binary system substantially increased below rotation
