incorporating Adrian's suggestions

--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -1,62 +1,77 @@
-\section{Conclusion}
+\section{Conclusions}
 
-In this paper, we demonstrated that the dispersion of velocities in the
-direction of galactic latitude, \vb, can be used as an age proxy, by showing
-that there is no strong evidence for mass-dependent heating in low-mass
-\kepler\ dwarfs: the velocity dispersions of K and M dwarfs, whose
-main-sequence lifetimes are longer than around 11 Gyrs, do not appear to
-increase with decreasing mass.
-Although {\it vertical} velocity, \vz, is a quantity that has been
-demonstrated to trace time-dependent orbital heating in the disc of the
-Galaxy, most stars with measured rotation periods do not yet have radial
-velocities, so we used velocity in the direction of Galactic latitude, \vb\,
-as a proxy for \vz.
-Using stars in the GUMS simulation, we showed that using \vb\ as a proxy for
-\vz\ introduces an additional pseudo-velocity dispersion, which increases with
-increasing Galactic latitude.
-For this reason we did not attempt to convert \vb\ dispersions into ages using
-an age-velocity dispersion relation.
-However, after removing high-latitude ($b>15^\circ$) stars from the sample, we
-confirmed that using \vb\ instead of \vz\ does not introduce any
-mass-dependent velocity dispersion bias into the sample.
-We therefore assumed that \vb\ velocity dispersion can be used to accurately
-rank stars by age, \ie\ a group of stars with a large velocity dispersion is,
-on average, older than a group of stars with a small velocity dispersion.
+In this paper, we used the \vb\ velocity dispersions of stars in the \mct\
+catalog to explore the evolution of stellar rotation period as a function of
+effective temperature and age.
+Our conclusions are as follows:
+\begin{itemize}
+\item{{\bf Magnetic braking efficiency doesn't always increase with decreasing
+mass for K dwarfs.}
+% We found that the \citet{angus2019} relation, which is based on the
+% period--color relation of the 650 Myr Praesepe cluster, does not correctly
+% describe the period--age--\teff\ relation for old stars.
+Although at young ages, rotation period is anti-correlated with \teff\ (as
+seen in many young open clusters, include Praesepe), at intermediate ages the
+relation flattens out and K dwarfs of different masses rotate at the same
+rate.
+At old ages, cooler K dwarfs spin more rapidly than hotter K dwarfs of the
+same age.}
 
-% We found that old groups of cool dwarfs, selected to be coeval using the
-% \citet{angus2019} gyrochronology relation, do {\it not} have the same velocity
-% dispersion across all temperatures.
-We used the \vb\ velocity dispersions of stars in the \mct\ catalog to explore
-the evolution of stellar rotation period as a function of effective
-temperature and age.
-We found that the \citet{angus2019} relation, which is based on the
-period--color relation of the 650 Myr Praesepe cluster, does not correctly
-describe the period--age--\teff\ relation for old stars.
-Instead we found that, at young ages, rotation period is anti-correlated with
-\teff: cooler stars spin more slowly than hotter stars of the same age.
-However, at intermediate ages the relation flattens out and K dwarfs rotate at
-the same rate, regardless of mass.
-At old ages, it seems that cooler K dwarfs spin more rapidly than hotter K
-dwarfs of the same age.
-We showed that the period--\teff\ relations change shape over time in a way
-that qualitatively agrees with theoretical models which include a
-mass-dependent core-envelope angular momentum transport \citep{spada2019}.
+\item{{\bf Variable core-envelope coupling may be the cause.} We showed that
+the period--\teff\ relations change shape over time in a way that
+qualitatively agrees with theoretical models which include mass and
+time-dependent core-envelope angular momentum transport \citep{spada2019}.}
 
 % The period-color/\teff\ relation seems to start flattening out after $\sim$1
 % Gyr (see figure \ref{fig:age_cut}), potentially around the same age, or just
 % older than the period gap which is located at a gyrochronal age of around
 % $\sim$1.1 Gyr (see figure \ref{fig:dispersion_period_teff}).
-We also found that the oldest stars in the \mct\ catalog are cooler than 4500
+\item{{\bf Low-mass stars stay active longer.}
+We found that the oldest stars in the \mct\ catalog are cooler than 4500
 K, which suggests that lower-mass stars remain active for longer, allowing
-their rotation periods to be measured at older ages.
-We speculate that the rotation period gap \citep{mcquillan2014} may separate
+their rotation periods to be measured at older ages.}
+
+\item{{\bf The \kepler\ period gap may be related to core-envelope coupling.}
+We speculated that the rotation period gap \citep{mcquillan2014} may separate
 a young regime where stellar rotation periods decrease with increasing mass
 from an old regime where periods increase with increasing mass, however more
 data are needed to provide a conclusive result.
 The velocity dispersions of stars increase smoothly across the rotation period
-gap, indicating that the gap does not separate two distinct populations.
-Finally, we used kinematics to indicate that there is a population of
-synchronized binaries with rotation periods less than around 10 days.
+gap, indicating that the gap does not separate two distinct stellar
+populations.}
+
+\item{{\bf Rapidly rotating stars with large absolute velocities may be
+synchronized binaries.}
+We used kinematics to indicate that there is a population of
+synchronized binaries with rotation periods less than around 10 days.}
+
+\item{{\bf \sigmavb\ can be used as an age proxy for \kepler\ stars.} In the
+    appendix of this paper we demonstrate that the dispersion of velocities in
+        the direction of Galactic latitude, \vb, can be used as an age proxy,
+        by showing that there is no strong evidence for mass-dependent heating
+        in low-mass \kepler\ dwarfs: the velocity dispersions of K and M
+        dwarfs, whose main-sequence lifetimes are longer than around 11 Gyrs,
+        do not appear to increase with decreasing mass.
+Although {\it vertical} velocity, \vz, is a quantity that has been
+demonstrated to trace time-dependent orbital heating in the disc of the
+Galaxy, most stars with measured rotation periods do not yet have radial
+velocities, so we used velocity in the direction of Galactic latitude, \vb\,
+as a proxy for \vz.
+        Using stars in the GUMS simulation \citep{robin2012}, we showed that
+        using \vb\ as a proxy for \vz\ introduces an additional
+        pseudo-velocity dispersion, which increases with increasing Galactic
+        latitude.
+% For this reason we did not attempt to convert \vb\ dispersions into ages using
+% an age-velocity dispersion relation.
+However, after removing high-latitude ($b>15^\circ$) stars from the sample, we
+confirmed that using \vb\ instead of \vz\ does not introduce any
+mass-dependent velocity dispersion bias into the sample.
+We therefore confirmed that \vb\ velocity dispersion can be used to accurately
+rank stars by age.}
+% , \ie\ a group of stars with a large velocity dispersion is,
+% on average, older than a group of stars with a small velocity dispersion.}
+
+\end{itemize}
 
 % explanations for these observations, including incorrect dust corrections for
 % the lowest-mass stars and an excess of companions increasing the velocity
