--- a/paper/intro.tex
+++ b/paper/intro.tex
@@ -106,8 +106,8 @@ targets ($\sim$12th-16th magnitudes).
 For this reason, we used velocity in the direction of galactic latitude, \vb,
 as a proxy for \vz.
 The \kepler\ field is positioned at low galactic latitude
-(b=$\sim$5-20\degrees), so \vb\ is a close (although imperfect, see section
-\ref{sec:method}) approximation to \vz.
+(b=$\sim$5-20\degrees), so \vb\ is a close (although imperfect, see
+appendix) approximation to \vz.
 Because we use \vb\ rather than \vz\, we do not calculate absolute kinematic
 ages using a published age--velocity dispersion relation (AVR), calibrated with
 vertical velocity.
@@ -124,11 +124,12 @@ velocities.
 In section \ref{sec:results} we use kinematics to investigate the relationship
 between stellar rotation period, age and color/\teff\ and interpret the
 results.
-We also establish that \vb\ velocity dispersion, \sigmavb, can be used as an
-age proxy by demonstrating that neither mass-dependent heating nor the
-\kepler/\gaia\ selection function is observed to strongly affect our sample.
-Finally, we examine the rotation period gap and the kinematics of synchronized
-binaries in section \ref{sec:results}.
+We also examine the rotation period gap and the kinematics of synchronized
+binaries.
+In the appendix, we establish that \vb\ velocity dispersion, \sigmavb, can be
+used as an age proxy by demonstrating that neither mass-dependent heating nor
+the \kepler/\gaia\ selection function is observed to strongly affect our
+sample.
 % We show that the period-color relation of Praesepe is not applicable to
 % old stars in section \ref{sec:age_cut}, and reveal the true shape of the
 % period-color relations in section \ref{sec:the_reveal}.
