--- a/paper/method.tex
+++ b/paper/method.tex
@@ -154,6 +154,17 @@ Stars with negative parallaxes, parallax signal-to-noise ratios less than 10,
 stars fainter than 16th magnitude, stars with absolute \vb\ uncertainties
 greater than 1 \kms\, and stars with galactic latitudes greater than
 15\degrees\ (justification provided below) were removed from the sample.
+Finally, we removed stars with rotation periods shorter than the main
+population of periods, since this area of the period-\teff\ diagram is
+sparsely populated.
+We removed these rapid rotators by cutting out stars with gyrochronal ages
+less than 0.5 Gyr \citep[based on the][gyro-model]{angus2019}, because a 0.5
+Gyr gyrochrone\footnote{A gyrochrone is a gyrochronological isochrone, or a
+line of constant age in period-\teff, or period-color space.} traces the
+bottom edge of the main population of rotation periods.
+After these cuts, around 13,000 stars out of the original $\sim$34,000 were
+included in the sample.
+
 % Because \vb\ is only a close approximation to \vz\ at low galactic latitudes,
 % and because latitude is correlated with stellar mass (lower mass stars are
 % older and tend to be preferentially located at high $b$, although this trends
