--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -139,6 +139,8 @@ M\={a}noa, Honolulu, HI, USA}
 
 \include{acknowledgements}
 
+\include{appendix}
+
 \bibliographystyle{plainnat}
 \bibliography{bib.bib}
 \end{document}
