--- a/paper/conclusion.tex
+++ b/paper/conclusion.tex
@@ -11,7 +11,7 @@ mass for K dwarfs.}
 % period--color relation of the 650 Myr Praesepe cluster, does not correctly
 % describe the period--age--\teff\ relation for old stars.
 Although at young ages, rotation period is anti-correlated with \teff\ (as
-seen in many young open clusters, include Praesepe), at intermediate ages the
+seen in many young open clusters, including Praesepe), at intermediate ages the
 relation flattens out and K dwarfs of different masses rotate at the same
 rate.
 At old ages, cooler K dwarfs spin more rapidly than hotter K dwarfs of the
@@ -59,7 +59,7 @@ velocities, so we used velocity in the direction of Galactic latitude, \vb\,
 as a proxy for \vz.
         Using stars in the GUMS simulation \citep{robin2012}, we showed that
         using \vb\ as a proxy for \vz\ introduces an additional
-        pseudo-velocity dispersion, which increases with increasing Galactic
+        velocity scatter, which increases with increasing Galactic
         latitude.
 % For this reason we did not attempt to convert \vb\ dispersions into ages using
 % an age-velocity dispersion relation.
