--- a/paper/method.tex
+++ b/paper/method.tex
@@ -153,7 +153,8 @@ covariances between \gaia\ positions, parallaxes and proper motions.
 Stars with negative parallaxes, parallax signal-to-noise ratios less than 10,
 stars fainter than 16th magnitude, stars with absolute \vb\ uncertainties
 greater than 1 \kms\, and stars with galactic latitudes greater than
-15\degrees\ (justification provided below) were removed from the sample.
+15\degrees\ (justification provided in the appendix) were removed from the
+sample.
 Finally, we removed stars with rotation periods shorter than the main
 population of periods, since this area of the period-\teff\ diagram is
 sparsely populated.
