--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -91,11 +91,11 @@
     Adrian M. Price-Whelan$^2$,
     Jason Curtis$^1$,
     Travis Berger$^6$,
-    Rocio Kiman$^7$,
     Elisabeth Newton$^5$,
     Jennifer van Saders$^6$,
+    Rocio Kiman$^7$,
     Dan Foreman-Mackey$^2$,
-    Yuxi Lu$^1, 3$,
+    Yuxi Lu$^{1, 3}$,
     Lauren Anderson$^8$}
 
 \altaffiltext{\amnh}{American Museum of Natural History, Central Park West,
@@ -106,11 +106,11 @@ Manhattan, NY, USA}
 University, Manhattan, NY, USA}
 \altaffiltext{\cfa}{Harvard-Smithsonian Center for Astrophysics, Cambridge,
 MA, USA}
-\altaffiltext{\cuny}{Department of physics, CUNY Graduate Center, City
-University of New York, Manhattan, NY, USA}
+\altaffiltext{\dartmouth}{Dartmouth College, Hanover, NH, USA}
 \altaffiltext{\hawaii}{Institute for Astronomy, University of Hawai'i at
 M\={a}noa, Honolulu, HI, USA}
-\altaffiltext{\dartmouth}{Dartmouth College, Hanover, NH, USA}
+\altaffiltext{\cuny}{Department of physics, CUNY Graduate Center, City
+University of New York, Manhattan, NY, USA}
 \altaffiltext{\carnegie}{Carnegie Observatories, Pasadena, CA, USA}
 
 % Still to do: deredden before calculating ages.
