updating Lauren's affiliation

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -111,7 +111,8 @@ MA, USA}
 M\={a}noa, Honolulu, HI, USA}
 \altaffiltext{\cuny}{Department of physics, CUNY Graduate Center, City
 University of New York, Manhattan, NY, USA}
-\altaffiltext{\carnegie}{Carnegie Observatories, Pasadena, CA, USA}
+\altaffiltext{\carnegie}{Observatories of the Carnegie Institution for
+Science, 813 Santa Barbara Street, Pasadena, CA 91101, USA}
 
 % Still to do: deredden before calculating ages.
 
