removing commented blocks of text

--- a/paper/ms.tex
+++ b/paper/ms.tex
@@ -1,7 +1,10 @@
-% zip ms_files.zip ms.tex abstract.tex intro.tex method.tex results.tex conclusion.tex Praesepe.pdf variance.pdf simulated_CMD.pdf rotation_model_praesepe.pdf simulation_results.pdf NGC6819.pdf NGC6819_results.pdf hz.bib
+% zip files.zip
+% ms.tex abstract.tex intro.tex method.tex results.tex conclusion.tex
+% acknowledgements.tex appendix.tex
+% CMD_cuts_double.pdf main_figure.pdf gap.pdf vb_vs_teff.pdf vb_vz.pdf
+% bib.bib ms.pdf
 
 \documentclass[useAMS, usenatbib, preprint, 12pt]{aastex}
-% \documentclass[a4paper,fleqn,usenatbib,useAMS]{mnras}
 \usepackage{cite, natbib}
 \usepackage{float}
 \usepackage{amsmath}
@@ -114,28 +117,16 @@ University of New York, Manhattan, NY, USA}
 \altaffiltext{\carnegie}{Observatories of the Carnegie Institution for
 Science, 813 Santa Barbara Street, Pasadena, CA 91101, USA}
 
-% Still to do: deredden before calculating ages.
-
-% Word limit: 3500, currently 3702
-
-% Word limit: 250, currently 261
 \begin{abstract}
     \include{abstract}
 \end{abstract}
 
-% Word limit: 750, currently: 903
 \include{intro}
 
-% Word limit: 1000, currently 1634
 \include{method}
 
-% Word limit: 1000, currently 1037
 \include{results}
 
-% Word limit: 500
-% \include{discussion}
-
-% Word limit: 250, currently 191
 \include{conclusion}
 
 \include{acknowledgements}
